--- a/package.json
+++ b/package.json
@@ -38,16 +38,16 @@
     "test": "grunt test"
   },
   "devDependencies": {
+    "chai": "~4.2.0",
+    "cheerio": "~0.12.0",
     "grunt": "~0.4.0",
+    "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-jshint": "~0.3.0",
     "grunt-contrib-nodeunit": "~0.1.2",
     "grunt-contrib-watch": "~0.3.1",
-    "mocha": "~1.18.2",
-    "cheerio": "~0.12.0",
-    "grunt-mocha-test": "~0.10.2",
-    "chai": "~4.2.0",
     "grunt-mocha-istanbul": "~1.4.1",
-    "grunt-contrib-connect": "~0.7.1"
+    "grunt-mocha-test": "^0.13.3",
+    "mocha": "~1.18.2"
   },
   "keywords": [
     "gruntplugin"
